Fixed home page on small screens. attempted to fix project gifs

--- a/src/css/projects.less
+++ b/src/css/projects.less
@@ -11,6 +11,27 @@
         text-align: center;
     }
 
+    .iframe-wrapper {
+        width:100%;
+        height:0px;
+        position:relative;
+        padding-bottom:40%;
+    }
+
+    .iframe-content {
+        width:100%;
+        height:100%;
+        position:absolute;
+        left:5px;
+        top:0px;
+        overflow:hidden;
+    }
+
+    iframe.gif {
+        width: 100%;
+        min-height: 100%;
+    }
+
     iframe.youtube {
         width: 100%;
         min-height: 300px;
@@ -45,6 +66,10 @@
         iframe.youtube {
             max-width: 728px;
             height: 409px;
+        }
+
+        iframe.gif {
+            max-width: 728px;
         }
 
         .phone-screenshot {
